# NeuroMisil

./: CMakeLists.txt  Paltas.cpp  main.cpp  stepdetection.cpp  stepdetection.h
Logging/: Evaluación.ipynb  Pasos_Kalman.ipynb  error_KalmanRight.csv  pasos_ground2.csv
Logging/.ipynb_checkpoints/: Pasos_Kalman-checkpoint.ipynb
